implemented Ostaps comments

--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -385,4 +385,49 @@ series = {ICML'10}
 journal = {unpublished}
 }
 
+@INPROCEEDINGS{Patrol,
+  title = {PATROL: A Velocity Control Framework for Autonomous Vehicle via Spatial-Temporal Reinforcement Learning},
+  author = {Xu, Zhi and Liu, Shuncheng and Wu, Ziniu  and Chen, Xu and Zeng, Kai and  Zheng, Kai and Su, Han  },
+  year = {2021},
+  booktitle = {Proceedings of the 30th ACM International Conference on Information and Knowledge Management (CIKM ’21), November 1–5, 2021, Virtual Event, QLD, Australia},
+ url={https://doi.org/10.1145/3459637.3482283}
+}
+
+@INPROCEEDINGS{HumanLikeCF,
+  author={Zhang, Yi and Sun, Ping and Yin, Yuhan and Lin, Lin and Wang, Xuesong},
+  booktitle={2018 IEEE Intelligent Vehicles Symposium (IV)}, 
+  title={Human-like Autonomous Vehicle Speed Control by Deep Reinforcement Learning with Double Q-Learning}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1251-1256},
+  doi={10.1109/IVS.2018.8500630}
+}
+
+@article{HumanLikeCF2,
+author = {Ju Xie and Xing Xu and Feng Wang and Haobin Jiang},
+title ={Modeling human-like longitudinal driver model for intelligent vehicles based on reinforcement learning},
+journal = {Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering},
+volume = {235},
+number = {8},
+pages = {2226-2241},
+year = {2021},
+doi = {10.1177/0954407020983579},
+URL = {https://doi.org/10.1177/0954407020983579},
+eprint = {https://doi.org/10.1177/0954407020983579}
+}
+
+@article{EndToEndCF,
+author = {Masmoudi, Mehdi and Friji, Hamdi and Ghazzai, Hakim and Massoud, Yehia},
+year = {2021},
+month = {05},
+pages = {1-1},
+title = {A Reinforcement Learning Framework for Video Frame-Based Autonomous Car-Following},
+volume = {PP},
+journal = {IEEE Open Journal of Intelligent Transportation Systems},
+doi = {10.1109/OJITS.2021.3083201}
+}
+
+
+
 
