--- a/RL_vehicles.tex
+++ b/RL_vehicles.tex
@@ -103,15 +103,14 @@
 		
 		
 		\begin{abstract}		
-		We propose and simulate a novel car following model based on deep reinforcement learning. Instead of reproducing  existing follower trajectories, our model is trained to maximize externally given reward functions for the free and car-following regimes. The parameters of the reward functions such as desired speed, time gap, or accelerations ressemble that of traditional models such as the Intelligent driver model (IDM) and allow for explicitly implementing different driving styles. Moreover, they partially lift the black- box nature of conventional neural network models. The model is trained on leading speed profiles governed by a truncated  Ornstein-Uhlenbeck process reflecting a realistic leader’s kinematics.
+		We propose and validate a novel car following model based on deep reinforcement learning. Our model is trained to maximize externally given reward functions for the free and car-following regimes, instead of reproducing  existing follower trajectories. The parameters of these reward functions such as desired speed, time gap, or accelerations resemble that of traditional models such as the Intelligent Driver Model (IDM) and allow for explicitly implementing different driving styles. Moreover, they partially lift the black-box nature of conventional neural network models. The model is trained on leading speed profiles governed by a truncated  Ornstein-Uhlenbeck process reflecting a realistic leader’s kinematics.
 	
-		This allows for arbitrary driving situations and an infinite supply of training data. For various parameterizations of the reward functions, and for a wide variety of artificial and real leader data, the model turned out to be unconditionally string stable and crash free. Moreover, a platoon of three simulated followers following a real trajectory showed better driving comfort and safety metrics than the followers of the real four-platoon experiment. A cross comparison with the IDM  calibrated to the goodness of fit of the relative gaps showed not only a higher reward compared to the traditional model but also a better goodness of fit.
+		This allows for arbitrary driving situations and an infinite supply of training data. For various parameterizations of the reward functions, and for a wide variety of artificial and real leader data, the model turned out to be unconditionally string stable, comfortable and crash-free. String stability has been tested with a platoon of five followers following an artificial and a real leading trajectory. A cross-comparison with the IDM  calibrated to the goodness-of-fit of the relative gaps showed a higher reward compared to the traditional model and a better goodness-of-fit.
 		\end{abstract}
 	
 		
 		\begin{keyword}
-			reinforcement learning \sep car-following model \sep stochastic
-			processes \sep string stability \sep validation \sep trajectory data 
+			reinforcement learning \sep car-following model \sep string stability \sep validation \sep trajectory data 
 		\end{keyword}
 		
 	\end{frontmatter}
@@ -134,7 +133,7 @@
 	Especially Deep Reinforcement Learning (DRL), which combines the power
 	using deep neural networks with Reinforcement Learning, has shown its potential in a wide variety of autonomous driving tasks. 
 	In \cite{OnRampMerge2018} and \cite{OnRampMerge2020}, DRL is used to
-	guide an autonomous vehicle safely via an on-ramp to the freeway. In \cite{intersection1}, \cite{intersection3} and \cite{intersection2}, DRL methods are used to manage traffic of autonomous vehicles at intersections, optimizing safety and efficiency.
+	guide an autonomous vehicle safely via an on-ramp to the freeway. Another approach is to manage traffic of autonomous vehicles at intersections, optimizing safety and efficiency such as in \cite{intersection1}, \cite{intersection3} and \cite{intersection2}.
 	In \cite{LangeChange1}, DRL is used to solve lane-changing maneuvers.
 	
 	A further task in autonomous driving is to model the vehicle behavior
@@ -142,7 +141,7 @@
 	computed to achieve safe and comfortable driving. Approaches
 	for solving this task are classical car-following models, such as the
 	Intelligent Driver Model (IDM) \citep{Opus} or stochastic car-following
-	models such as that of \cite{Treiber2018stochIDM_TRB}. Furthermore, data-driven approaches used Deep Learning methods to train a car-following model based on experimental car-follower data, such as in \cite{Chong2011SimulationOD} or \cite{ZHOU2017245}. The downside of this approach is that the model tries to emulate human driver behavior, which can still be suboptimal.
+	models such as that of \cite{Treiber2018stochIDM_TRB}. Furthermore, data-driven approaches used Deep Learning methods to train a car-following model based on experimental car-follower data, such as in \cite{Chong2011SimulationOD}, \cite{ZHOU2017245}, \cite{HumanLikeCF} and \cite{HumanLikeCF2}. The downside of this approach is that the model tries to emulate human driver behavior, which can still be suboptimal.
 	
 	To overcome this issue, DRL methods train non-human car-following models that can optimize metrics such as safety, efficiency, and comfort. 
 	One approach is to train on scenarios where the leading vehicle
@@ -157,7 +156,7 @@
 	
 	Another issue of car-following models is string stability. There are
 	several studies focusing on dampening traffic oscillations by using a
-	sequence of trained vehicles, such as these by \cite{qu2020jointly}, \cite{DissipatingStopAndGoWaves}, and \cite{DampenStopAndGoTraffic}.
+	sequence of trained vehicles, such as these by \cite{qu2020jointly}, \cite{DissipatingStopAndGoWaves}, and \cite{DampenStopAndGoTraffic}. \cite{Patrol} developed a car-following model to solve 'phantom' traffic jams by obtaining information of multiple vehicles ahead. \cite{EndToEndCF} proposed a DRL end-to-end car-following model based on video input.
 	
 	All the mentioned DRL car-following models have three disadvantages in
 	common: First, the acceleration range is limited in a way that
@@ -172,8 +171,7 @@
 		accelerations leading to a collision-free behavior
 		also in safety-critical situations such as a full-braking maneuver of the leader;
 		\item being trained on leading trajectories
-		based on an Ornstein–Uhlenbeck process \citep{OU}
-		with parameters reflecting the kinematics of real
+		based on an \cite{OU} process with parameters reflecting the kinematics of real
 		drivers. This leads to high generalization capabilities and
 		model usage in a wider variety of traffic
 		scenarios. Moreover, the supply of learning data is
@@ -285,7 +283,7 @@
 		\item the Free-Driving Policy refers to free driving and aims to not to exceed a desired speed
 		\item the Car-Following Policy refers to following a vehicle and aims to keep a reasonable gap to a leader vehicle  	
 	\end{itemize}
-	Although both policies are trained with different reward functions and in different training environments, they both output an acceleration value. As an arbitrator between both accelerations, we use a simple min-function. We adopted this approach from the IDM+ that also uses separate terms for free-flow and interaction with a leading vehicle (\cite{idm_plus}). In the next sections, the model specifications of the Free-Driving Policy and the Car-Following Policy, both trained with the DDPG algorithm, are described in detail.
+	Although both policies are trained with different reward functions and in different training environments, they both output an acceleration value. As an arbitrator between both accelerations, we use a simple min-function. We adopted this approach from the IDM+ that also uses separate terms for free-flow and interaction with a leading vehicle, see \cite{idm_plus}. In the next sections, the model specifications of the Free-Driving Policy and the Car-Following Policy, both trained with the DDPG algorithm, are described in detail.
 	
 	\begin{figure}
 		\centering
@@ -329,7 +327,7 @@
 	\label{rewardFunctionFree}
 	The reward function contribution a time step $t$ is decomposed into two factors. The first part aims to
 	not exceed a desired speed $v\sub{des}$, but also to accelerate if the
-	desired speed is not reached yet.  
+	desired speed is not reached yet  
 	\begin{equation}
 	\label{eq:r1Free}
 	r_{t, \rm speed}  = 
@@ -342,7 +340,7 @@
 	\end{equation}
 	
 	The second part of the reward function aims to reduce the jerk in
-	order to achieve comfortable driving, 
+	order to achieve comfortable driving 
 	\begin{equation}
 	\label{eq:r2Free}
 	r_{t, \rm jerk} = -\left(\frac{1}{j\sub{comf}} \ \dv{\dot{v}_t}{t}\right)^2,
@@ -367,7 +365,7 @@
 	\label{training_environment1}
 	In order to train the RL agent for the task of keeping a desired
 	speed, the training environment is defined as follows. For the description of the vehicle dynamics, a point-mass kinematic model is used. The Euler and ballistic methods are used to update the speed and position for time step $t + 1$. This approach is recommended in \cite{numericalUpdateMethodsTreiber} as an efficient
-	and robust scheme for integrating car-following models.	
+	and robust scheme for integrating car-following models	
 	%	
 	\begin{align}
 	v_{t+1} &= v_{t} + \dot{v}_{t} d, \\
@@ -380,9 +378,9 @@
 	\subsection{Model training}
 	Both neural networks, critic and actor, are feed-forward neural
 	networks with one layer of hidden neurons, containing 16 neurons (see
-	Figure \ref{fig:MRL}). ReLU activation functions (\cite{relu}) are used, except for the output layer of the actor network that uses a tanh activation function. The bounded output $a_t$ in the range $[-1,1]$ is then mapped to the acceleration range by
+	Figure \ref{fig:MRL}). ReLU activation functions (\cite{relu}) are used, except for the output layer of the actor network that uses a tanh($\cdot$) activation function. The bounded output $a_t$ in the range $[-1,1]$ is then mapped to the acceleration range by
 	\begin{equation}
-		\dot{v}_t = \min \left( \abs{\dot{v}\sub{min}} a_t, \dot{v}\sub{max}\right)
+		\dot{v}_t = \min \left( \abs{\dot{v}\sub{min}} a_t, \dot{v}\sub{max}\right).
 	\end{equation}
 	The learning rate for updating the weights of the critic and actor network is set to 0.001. For the exploration of the action space, an exploration noise model has to be defined. We adopted a
 	zero-reverting Ornstein-Uhlenbeck process as suggested in \cite{DDPG}
@@ -403,7 +401,7 @@
 				Reward discount factor & 0.95 & 0.95 \\ 
 				Experience buffer length & 100000 & 100000 \\ 
 				Mini batch size & 32 & 32 \\ 			
-				Ornstein-Uhlenbeck  $\Theta_1$ & 0.15& 0.15 \\ 
+				Ornstein-Uhlenbeck  $\theta_1$ & 0.15& 0.15 \\ 
 				Ornstein-Uhlenbeck  $\sigma_1$ & 0.2 & 0.2 \\				
 				Number of hidden layers & 1 & 2\\
 				Neurons per hidden layer & 16 & 32\\
@@ -489,8 +487,7 @@
 	response in safety-critical situations by comparing the
 	kinematically needed deceleration (assuming an
 	unchanged speed of the leader) with the
-	comfortable deceleration $b\sub{comf}$,
-	
+	comfortable deceleration $b\sub{comf}$	
 	
 	
 	\begin{equation}
@@ -512,18 +509,18 @@
 	\end{cases}
 	\end{equation}
 	the kinematic deceleration $b\sub{kin}$ representing the minimum deceleration necessary to avoid a collision.
-	The argument of the tanh() function with  the
+	The argument of the tanh($\cdot$) function with  the
 	maximum possible deceleration ($\approx \unit[9]{m/s^2}$ on dry roads) gives a
 	non-dimensional measure for the seriousness of the critical situation
 	with values 
-	near or above 1 indicating an imminent crash.  The tanh function functions as a limitation for the reward value to the range $[-1,0]$. This has shown to make the learning process more stable. Notice that the case distinction in ~\eqref{eq:r1_CFP}  ensures that
+	near or above 1 indicating an imminent crash.  The tanh($\cdot$) function functions as a limitation for the reward value to the range $[-1,0]$. This has shown to make the learning process more stable. Notice that the case distinction in ~\eqref{eq:r1_CFP}  ensures that
 	this term is not activated in non-critical situations. The purpose of
 	the factor $r_{t, \rm safe}$ is twofold: It motivates the follower vehicle to
 	brake in safety-critical or near-crash situations.  Furthermore, it motivates the follower vehicle also to break early in noncritical situations if the expected needed deceleration is above the comfortable, in order to achieve a comfortable
 	approaching of the leader vehicle.
 	
 	The second part of the reward function aims to not fall below a reasonable
-	distance to the leading vehicle.
+	distance to the leading vehicle
 	
 	
 	\begin{equation}
@@ -572,7 +569,7 @@
 	
 	
 	The third factor of the reward function aims to reduce the jerk in
-	order to achieve comfortable driving and has been designed analogously to the Free-Driving Policy, 
+	order to achieve comfortable driving and has been designed analogously to the Free-Driving Policy
 	\begin{equation}
 	\label{eq:r3_CFP}
 	r_{t, \rm jerk} = -\left(\frac{1}{j\sub{comf}} \ \dv{\dot{v}_t}{t}\right)^2.
@@ -595,8 +592,7 @@
 	\label{training_environment2}
 	The training environment is modeled by a leader and a follower vehicle. Both vehicles implement the point-mass kinematic model described in Section~\ref{training_environment1}. While the RL agent controls the follower vehicle, the leading trajectory is based on an Ornstein–Uhlenbeck process, whose parameters
 	reflect the kinematics of real leaders. The Ornstein–Uhlenbeck process describes
-	the speed of the leading vehicle $v_{t,l}$ and is defined as 
-	
+	the speed of the leading vehicle $v_{t,l}$ and is defined as 	
 	\begin{equation} \label{eq:AR1}
     \mathrm{d} v_{t,l}=\theta_2\left(\mu_2-v_{t,l}\right) \mathrm{d} t+\sigma_2 \mathrm{d} W_{t},
 	\end{equation}
@@ -615,7 +611,7 @@
 	vehicle. After the Ornstein-Uhlenbeck process is calculated for one
 	episode, all speed values are clipped to the range $[0,\unit[16.6]{m/s}]$. This generates
 	training situations, where the leader vehicle stands still for some
-	time, e. g. at $t= [\unit[48]{s}, \unit[50]{s}]$ in Figure
+	time, e.g. at $t= [\unit[48]{s}, \unit[50]{s}]$ in Figure
 	\ref{fig:AR1process}. Furthermore, the leader's trajectory
 	also contains intervals where the speed is above the desired speed
 	$v\sub{des}=\unit[15]{m/s}$ of both the leader and the follower,
@@ -965,7 +961,7 @@
 	
 		\subsection*{Acknowledgements}
 		We thank Vincenzo Punzo for making available to us the experimental
-		car-following data used in this paper. This work was funded by BAW - Bundesanstalt für Wasserbau (Mikrosimulation des Schiffsverkehrs auf dem Niederrhein)
+		car-following data used in this paper. This work was partially funded by BAW - Bundesanstalt für Wasserbau (Mikrosimulation des Schiffsverkehrs auf dem Niederrhein)
 	
 	
 	
