prepared files for submitting to ArXiv and Transportation Research Part B

--- a/for submitting/TransportationResearchPartB/RL_vehicles.tex
+++ b/for submitting/TransportationResearchPartB/RL_vehicles.tex
@@ -288,7 +288,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=12cm]{images/MRL_small}
+		\includegraphics[width=12cm]{MRL_small}
 		\caption{Modularized RL architecture with actor critic networks of both policies.} 
 		\label{fig:MRL}
 	\end{figure}
@@ -418,7 +418,7 @@
 	%
 	\begin{figure}
 		\centering
-		\includegraphics[width=12cm]{images/TrainingReward}
+		\includegraphics[width=12cm]{TrainingReward}
 		\caption{Asymmetric moving average reward of the last 30 training episodes for Free-Driving Policy and Car-Following Policy} 
 		\label{fig:TrainingReward}
 	\end{figure}
@@ -543,7 +543,7 @@
 	%
 	\begin{figure}
 		\centering
-		\includegraphics[width=12cm]{images/RewardFunc1}
+		\includegraphics[width=12cm]{RewardFunc1}
 		\caption{Factor $r_{t, \rm gap}$ of the reward function maximizing the reward
 			for car following with time gap $T$} 
 		\label{fig:RewardFunc1}
@@ -621,7 +621,7 @@
 	%
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/AR1process}
+		\includegraphics[width=0.95\textwidth]{AR1process}
 		\caption{Example of a leading trajectory based on the parametrized Ornstein-Uhlenbeck process used to train the RL agent}
 		\label{fig:AR1process}
 	\end{figure}
@@ -688,7 +688,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/manipulatedLeader.eps}
+		\includegraphics[width=0.95\textwidth]{manipulatedLeader.eps}
 		\caption{Response to an external leading vehicle speed
 			profile.}
 		\label{fig:manipulatedLeader}
@@ -696,7 +696,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/VarAccComp}
+		\includegraphics[width=0.95\textwidth]{VarAccComp}
 		\caption{Comparison of the acceleration variance between
 			leader and follower for a leader controlled by the Ornstein-Uhlenbeck process (blue
 			bars) and the leading vehicle of the Napoli experiment
@@ -727,7 +727,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/AR1Kolonne}
+		\includegraphics[width=0.95\textwidth]{AR1Kolonne}
 		\caption{Response to a leader trajectory based on a Ornstein-Uhlenbeck process}
 		\label{fig:AR1Kolonne}
 	\end{figure}
@@ -752,7 +752,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/PunzoKolonne}
+		\includegraphics[width=0.95\textwidth]{PunzoKolonne}
 		\caption{Response to a real leader trajectory}
 		\label{fig:PunzoKolonne}
 	\end{figure}
@@ -782,7 +782,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/differentT}
+		\includegraphics[width=0.95\textwidth]{differentT}
 		\caption{Impact of differently parametrized RL agents
 			on the driving behavior }
 		\label{fig:differentT}
@@ -854,7 +854,7 @@
 	\begin{figure}
 		
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/IDMvsRL_dist}
+		\includegraphics[width=0.95\textwidth]{IDMvsRL_dist}
 		\caption{Comparison between IDM and RL agent, calibrated on the same set of parameters}
 		\label{fig:IDMvsRL}
 	\end{figure}
@@ -896,14 +896,14 @@
 	
 	\begin{figure}	
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/TTC}
+		\includegraphics[width=0.95\textwidth]{TTC}
 		\caption{Distribution of time-to-collision (TTC) for IDM and RL agent in different experiments based on real leader trajectories}
 		\label{fig:DistributionTTC}
 	\end{figure}
 	
 	\begin{figure}	
 		\centering
-		\includegraphics[width=0.95\textwidth]{images/TTC_CaseStudy}
+		\includegraphics[width=0.95\textwidth]{TTC_CaseStudy}
 		\caption{Response of an IDM and RL agent on a real trajectory. Safety-critical situations where the TTC of the IDM drops below \unit[2.5]{s} are marked in green.}
 		\label{fig:TTC_CaseStudy}
 	\end{figure}
